test/error/sem/declareVarString.tig
let
    var n := "string"     
    var f := 1     
    var i := 2     


in  
    printf(n);
end
